unpackaged/main/default/objects/zkfedex__Package__c/zkfedex__Package__c.object-meta.xml
<CustomObject>
    <customHelpPage>zkfedex__packageHelp</customHelpPage>
    <description>Package is a container of goods or products.</description>
    <label>FedEx Package</label>
    <nameField>
        <displayFormat>Package-{0000000000}</displayFormat>
        <label>Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>