unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__AdmissibilityPackageTypeName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AdmissibilityPackageTypeName__c</fullName>
    <label>Admissibility Package Type Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>