unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__AllowRecordDelete__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__AllowRecordDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Record Delete</label>
    <type>Checkbox</type>
</CustomField>