unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__BasedOnPackageProfile__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__BasedOnPackageProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Package Profile that was used to create this package</description>
    <inlineHelpText>The Package Profile that was used to create this package</inlineHelpText>
    <label>Based on Package Profile</label>
    <referenceTo>zkfedex__Package__c</referenceTo>
    <relationshipName>Packages</relationshipName>
    <type>Lookup</type>
</CustomField>