unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__DeclaredValue__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DeclaredValue__c</fullName>
    <label>Declared/Carriage Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>