unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__Description__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Description__c</fullName>
    <label>Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>