unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__DimensionUnits__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DimensionUnits__c</fullName>
    <description>The units of measurement for the length, width, and height</description>
    <inlineHelpText>The units of measurement for the length, width, and height</inlineHelpText>
    <label>Dimension Units</label>
    <length>5</length>
    <type>Text</type>
</CustomField>