unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__Height__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Height__c</fullName>
    <description>The Height of the package, measured in the units specified by the "dimension units" field

Field not necessary if using one of the following Packaging Types:
FedEx 10KG Box
FedEx 25KG Box
FedEx Box
FedEx Envelope
FedEx Pak
FedEx Tube</description>
    <inlineHelpText>The Height of the package, measured in the units specified by the "dimension units" field

Field not necessary if using one of the following Packaging Types:
FedEx 10KG Box
FedEx 25KG Box
FedEx Box
FedEx Envelope
FedEx Pak
FedEx Tube</inlineHelpText>
    <label>Height</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>