unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__IsFreight__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IsFreight__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if this instance describes a skid of a freight shipment</description>
    <inlineHelpText>Set to true if this instance describes a skid of a freight shipment</inlineHelpText>
    <label>Is a Freight</label>
    <type>Checkbox</type>
</CustomField>