unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__PackageProfileDescription__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PackageProfileDescription__c</fullName>
    <description>The description used to identify this Package Profile. Package Profiles are generic records that are used by Shipmate for Package 'Re-Use'</description>
    <inlineHelpText>The description used to identify this Package Profile. Package Profiles are generic records that are used by Shipmate for Package 'Re-Use'</inlineHelpText>
    <label>Package Profile Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>