unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__PackagingTypeName__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PackagingTypeName__c</fullName>
    <label>Packaging Type Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>