unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsCodAmount__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsCodAmount__c</fullName>
    <label>COD Collection Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>