unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsCodAmountCurrency__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsCodAmountCurrency__c</fullName>
    <label>COD Collection Amount Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>