unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsDangerousGoodsAccessibility__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsDangerousGoodsAccessibility__c</fullName>
    <label>Dangerous Goods Accessibility</label>
    <length>25</length>
    <type>Text</type>
</CustomField>