unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsDryIceWeight__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsDryIceWeight__c</fullName>
    <label>Dry Ice Weight</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>