unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsNonStandardPackaging__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsNonStandardPackaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Standard Packaging</label>
    <type>Checkbox</type>
</CustomField>