unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsOrmDDetails__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsOrmDDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ORM-D Details</label>
    <referenceTo>zkfedex__DangerousGoodsDetails__c</referenceTo>
    <relationshipLabel>FedEx Packages</relationshipLabel>
    <relationshipName>FedEx_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>