unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsPriorityAlert__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsPriorityAlert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Alert</label>
    <type>Checkbox</type>
</CustomField>