unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsPriorityAlertContent__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsPriorityAlertContent__c</fullName>
    <label>Priority Alert - Content</label>
    <length>50</length>
    <type>Text</type>
</CustomField>