unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__SsPriorityAlertPlus__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__SsPriorityAlertPlus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Alert Plus</label>
    <type>Checkbox</type>
</CustomField>