unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__TotalPiecesOnSkid__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__TotalPiecesOnSkid__c</fullName>
    <description>For a freight shipment, this is the number of packages on a single skid</description>
    <inlineHelpText>For a freight shipment, this is the number of packages on a single skid</inlineHelpText>
    <label>Total Pieces On Skid</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>