unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__Weight__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Weight__c</fullName>
    <description>The Weight of the package, measured in the units specified by the "weight units" field</description>
    <inlineHelpText>The Weight of the package, measured in the units specified by the "weight units" field</inlineHelpText>
    <label>Weight</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>