unpackaged/main/default/objects/zkfedex__Package__c/fields/zkfedex__WeightUnits__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__WeightUnits__c</fullName>
    <description>The units of measurement for the weight</description>
    <inlineHelpText>The units of measurement for the weight</inlineHelpText>
    <label>Weight Units</label>
    <length>5</length>
    <type>Text</type>
</CustomField>