unpackaged/main/default/objects/zkfedex__Package__c/listViews/zkfedex__All_Package_Profiles.listView-meta.xml
<ListView>
    <fullName>zkfedex__All_Package_Profiles</fullName>
    <columns>NAME</columns>
    <columns>zkfedex__PackageProfileDescription__c</columns>
    <columns>zkfedex__PackagingTypeName__c</columns>
    <columns>zkfedex__Weight__c</columns>
    <columns>zkfedex__WeightUnits__c</columns>
    <columns>zkfedex__Length__c</columns>
    <columns>zkfedex__Width__c</columns>
    <columns>zkfedex__Height__c</columns>
    <columns>zkfedex__DimensionUnits__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>zkfedex__PackageProfile__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Package Profiles</label>
</ListView>